==> Danmuse/InductometerTRD_FRBA/Firmware & Software/Inductometer v2.0/ST7789 TFT scripts/Other examples/ST7789_DMA_STM32F1/st7789.cpp <==
#include "st7789.h"
#include <string.h>

static void ST7789_WriteData(uint8_t *buff, size_t buff_size)
{
  ST7789_Select();
  ST7789_DC_Set();

  // split data in small chunks because HAL can't send more than 64K at once

  while (buff_size > 0) {
    uint16_t chunk_size = buff_size > 65535 ? 65535 : buff_size;
    // SPI.beginTransaction(SPISettings (2000000, MSBFIRST, SPI_MODE0, DATA_SIZE_16BIT));  // 2 MHz clock, MSB first, mode 0
#ifdef USE_DMA
    if (DMA_MIN_SIZE <= buff_size)
    {
      SPI.dmaSend(buff, chunk_size, 0);
      // HAL_SPI_Transmit_DMA(&ST7789_SPI_PORT, buff, chunk_size);
      // while (ST7789_SPI_PORT.hdmatx->State != HAL_DMA_STATE_READY) {}
    }
    else
      SPI.write(buff, chunk_size);
      // HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
#else
    SPI.write(buff, chunk_size);
    // HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
#endif
    // SPI.endTransaction();
    buff += chunk_size;
    buff_size -= chunk_size;
  }

  ST7789_UnSelect();
}

void ST7789_Init(void)
{
#ifdef USE_DMA
  memset(disp_buf, 0, sizeof(disp_buf));
#endif
  SPI.begin();
  pinMode(TFT_RST, OUTPUT);
  pinMode(TFT_DC, OUTPUT);
  pinMode(TFT_CS, OUTPUT);
  HAL_Delay(25);
  ST7789_RST_Clr();
  HAL_Delay(25);
  ST7789_RST_Set();
  HAL_Delay(50);

  SPI.beginTransaction(SPISettings (36000000, MSBFIRST, SPI_MODE3, DATA_SIZE_8BIT/*SPI_MODE0, DATA_SIZE_16BIT*/));  // 2 MHz clock, MSB first, mode 0
  // SPI.setDataSize(DATA_SIZE_16BIT);
  ST7789_WriteCommand(ST7789_COLMOD);		//	Set color mode
  ST7789_WriteSmallData(ST7789_COLOR_MODE_16bit);
  ST7789_WriteCommand(0xB2);				//	Porch control
  {
    uint8_t data[] = {0x0C, 0x0C, 0x00, 0x33, 0x33};
    ST7789_WriteData(data, sizeof(data));
  }
  ST7789_SetRotation(ST7789_ROTATION);	//	MADCTL (Display Rotation)

  /* Internal LCD Voltage generator settings */
  ST7789_WriteCommand(0XB7);				//	Gate Control
  ST7789_WriteSmallData(0x35);			//	Default value
  ST7789_WriteCommand(0xBB);				//	VCOM setting
  ST7789_WriteSmallData(0x19);			//	0.725v (default 0.75v for 0x20)
  ST7789_WriteCommand(0xC0);				//	LCMCTRL
  ST7789_WriteSmallData (0x2C);			//	Default value
  ST7789_WriteCommand (0xC2);				//	VDV and VRH command Enable
  ST7789_WriteSmallData (0x01);			//	Default value
  ST7789_WriteCommand (0xC3);				//	VRH set
  ST7789_WriteSmallData (0x12);			//	+-4.45v (defalut +-4.1v for 0x0B)
  ST7789_WriteCommand (0xC4);				//	VDV set
  ST7789_WriteSmallData (0x20);			//	Default value
  ST7789_WriteCommand (0xC6);				//	Frame rate control in normal mode
  ST7789_WriteSmallData (0x0F);			//	Default value (60HZ)
  ST7789_WriteCommand (0xD0);				//	Power control
  ST7789_WriteSmallData (0xA4);			//	Default value
  ST7789_WriteSmallData (0xA1);			//	Default value
  /**************** Division line ****************/

  ST7789_WriteCommand(0xE0);
  {
    uint8_t data[] = {0xD0, 0x04, 0x0D, 0x11, 0x13, 0x2B, 0x3F, 0x54, 0x4C, 0x18, 0x0D, 0x0B, 0x1F, 0x23};
    ST7789_WriteData(data, sizeof(data));
  }

  ST7789_WriteCommand(0xE1);
  {
    uint8_t data[] = {0xD0, 0x04, 0x0C, 0x11, 0x13, 0x2C, 0x3F, 0x44, 0x51, 0x2F, 0x1F, 0x1F, 0x20, 0x23};
    ST7789_WriteData(data, sizeof(data));
  }
  ST7789_WriteCommand (ST7789_INVON);		//	Inversion ON
  ST7789_WriteCommand (ST7789_SLPOUT);	//	Out of sleep mode
  ST7789_WriteCommand (ST7789_NORON);		//	Normal Display on
  ST7789_WriteCommand (ST7789_DISPON);	//	Main screen turned on

  HAL_Delay(50);
  ST7789_Fill_Color(BLACK);				//	Fill with Black.
}

void ST7789_Test(void)
{
  ST7789_Fill_Color(WHITE);
  HAL_Delay(1000);
  // ST7789_WriteString(10, 20, "Speed Test", Font_11x18, RED, WHITE);
  HAL_Delay(1000);
  ST7789_Fill_Color(CYAN);
  HAL_Delay(500);
  ST7789_Fill_Color(RED);
  HAL_Delay(500);
  ST7789_Fill_Color(BLUE);
  HAL_Delay(500);
  ST7789_Fill_Color(GREEN);
  HAL_Delay(500);
  ST7789_Fill_Color(YELLOW);
  HAL_Delay(500);
  ST7789_Fill_Color(BROWN);
  HAL_Delay(500);
  ST7789_Fill_Color(DARKBLUE);
  HAL_Delay(500);
  ST7789_Fill_Color(MAGENTA);
  HAL_Delay(500);
  ST7789_Fill_Color(LIGHTGREEN);
  HAL_Delay(500);
  ST7789_Fill_Color(LGRAY);
  HAL_Delay(500);
  ST7789_Fill_Color(LBBLUE);
  HAL_Delay(500);
  ST7789_Fill_Color(WHITE);
  HAL_Delay(500);

  /*
  ST7789_WriteString(10, 10, "Font test.", Font_16x26, GBLUE, WHITE);
  ST7789_WriteString(10, 50, "Hello Steve!", Font_7x10, RED, WHITE);
  ST7789_WriteString(10, 75, "Hello Steve!", Font_11x18, YELLOW, WHITE);
  ST7789_WriteString(10, 100, "Hello Steve!", Font_16x26, MAGENTA, WHITE);
  */
  HAL_Delay(1000);

  ST7789_Fill_Color(RED);
  // ST7789_WriteString(10, 10, "Rect./Line.", Font_11x18, YELLOW, BLACK);
  ST7789_DrawRectangle(30, 30, 100, 100, WHITE);
  HAL_Delay(1000);

  ST7789_Fill_Color(RED);
  // ST7789_WriteString(10, 10, "Filled Rect.", Font_11x18, YELLOW, BLACK);
  ST7789_DrawFilledRectangle(30, 30, 50, 50, WHITE);
  HAL_Delay(1000);

  ST7789_Fill_Color(RED);
  // ST7789_WriteString(10, 10, "Circle.", Font_11x18, YELLOW, BLACK);
  ST7789_DrawCircle(60, 60, 25, WHITE);
  HAL_Delay(1000);

  ST7789_Fill_Color(RED);
  // ST7789_WriteString(10, 10, "Filled Cir.", Font_11x18, YELLOW, BLACK);
  ST7789_DrawFilledCircle(60, 60, 25, WHITE);
  HAL_Delay(1000);

  ST7789_Fill_Color(RED);
  // ST7789_WriteString(10, 10, "Triangle", Font_11x18, YELLOW, BLACK);
  ST7789_DrawTriangle(30, 30, 30, 70, 60, 40, WHITE);
  HAL_Delay(1000);

  ST7789_Fill_Color(RED);
  // ST7789_WriteString(10, 10, "Filled Tri", Font_11x18, YELLOW, BLACK);
  ST7789_DrawFilledTriangle(30, 30, 30, 70, 60, 40, WHITE);
  HAL_Delay(1000);

  //	If FLASH cannot storage anymore datas, please delete codes below.
  ST7789_Fill_Color(WHITE);
  // ST7789_DrawImage(0, 0, 128, 128, (uint16_t *)saber);
  HAL_Delay(3000);
}
